--- a/app/src/main/res/layout/mainpageenglish.xml
+++ b/app/src/main/res/layout/mainpageenglish.xml
@@ -123,7 +123,7 @@
                 android:textColor="@android:color/white"
                 android:textAllCaps="false"
                 android:background="@android:color/transparent"
-                android:text="Shop"
+                android:text="Settings"
                 android:textSize="12dp"
                 android:layout_width="0dp"
                 android:layout_weight="1"
