--- a/app/src/main/res/layout/mainpagetamilmain.xml
+++ b/app/src/main/res/layout/mainpagetamilmain.xml
@@ -8,7 +8,7 @@
     android:focusable="true"
     android:id="@+id/maintamil"
     android:focusableInTouchMode="true"
-    tools:context=".MainPageEnglish">
+    tools:context=".MainTamil.MainPageTamil">
     <RelativeLayout
         android:layout_above="@+id/footer"
         android:layout_width="match_parent"
@@ -122,7 +122,7 @@
             android:textColor="@android:color/white"
             android:textAllCaps="false"
             android:background="@android:color/transparent"
-            android:text="Shop"
+            android:text="Settings"
             android:textSize="12dp"
             android:layout_width="0dp"
             android:layout_weight="1"
