--- a/app/src/main/res/layout/explore_feed_item_spinnerproduct.xml
+++ b/app/src/main/res/layout/explore_feed_item_spinnerproduct.xml
@@ -15,14 +15,14 @@
             android:id="@+id/product_imgae"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:layout_height="75dp" />
+            android:layout_height="80dp" />
         <LinearLayout
             android:orientation="vertical"
             android:layout_weight=".50"
             android:layout_width="0dp"
-            android:layout_height="75dp">
+            android:layout_height="80dp">
             <TextView
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="center|left"
                 android:id="@+id/text_product_title"
@@ -30,20 +30,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Spinner
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginLeft="5dp"
                 android:id="@+id/spin_product_price_list"
                 android:layout_width="wrap_content"
-                android:layout_height="20sp">
+                android:layout_height="20dp">
 
             </Spinner>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
-                android:layout_gravity="center|left"
+                android:layout_gravity="bottom|left"
                 android:textSize="14sp"
                 android:id="@+id/text_product_price"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight=".80"
                 android:layout_height="wrap_content" />
             <ImageButton
                 android:layout_marginRight="4dp"
@@ -54,6 +59,7 @@
                 android:src="@mipmap/heartwhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            </LinearLayout>
 
         </LinearLayout>
         <LinearLayout
@@ -62,12 +68,12 @@
 
             android:layout_weight=".25"
             android:layout_width="0dp"
-            android:layout_height="75dp">
+            android:layout_height="80dp">
             <TextView
                 android:layout_marginTop="27dp"
                 android:layout_gravity="center|center_vertical"
                 android:text="ADD TO CART"
-                android:textSize="15sp"
+                android:textSize="11sp"
                 android:id="@+id/text_product_addtocart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
