--- a/app/src/main/res/layout/explore_feed_item_withoutspinner.xml
+++ b/app/src/main/res/layout/explore_feed_item_withoutspinner.xml
@@ -26,18 +26,23 @@
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="center|left"
                 android:id="@+id/text_product_title_withoutspin"
-                android:text="test"
+
                 android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="center|left"
-                android:text="100"
+
                 android:textSize="14sp"
                 android:id="@+id/text_product_price_withoutspin"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight=".80"
                 android:layout_height="wrap_content" />
             <ImageButton
                 android:layout_marginRight="4dp"
@@ -48,6 +53,7 @@
                 android:src="@mipmap/heartwhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            </LinearLayout>
 
         </LinearLayout>
     <LinearLayout
@@ -61,7 +67,7 @@
             android:layout_marginTop="24dp"
             android:layout_gravity="center|center_vertical"
             android:text="ADD TO CART"
-            android:textSize="15sp"
+            android:textSize="11sp"
             android:id="@+id/text_product_addtocart_withoutspin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
