--- a/app/src/main/res/layout/explore_companylist_activity.xml
+++ b/app/src/main/res/layout/explore_companylist_activity.xml
@@ -84,5 +84,135 @@
             />
 
     </RelativeLayout>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:id="@+id/cart_layout"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:background="@android:color/white"
 
+        android:layout_above="@+id/footer">
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/mycart_textview"
+            android:layout_gravity="end"
+            android:gravity="end|center|center_horizontal"
+
+            android:textColor="@android:color/black"
+            android:text="MY CART"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+        <RelativeLayout
+            android:gravity="center|center_horizontal"
+            android:layout_centerInParent="true"
+            android:layout_width="0dp"
+            android:layout_weight=".33"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/cart_main_count"
+                android:minWidth="25dp"
+
+                android:minHeight="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:layout_centerInParent="true"
+                android:text="0"
+                android:background="@drawable/batgetext"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:textColor="@android:color/white"
+                android:textSize="10sp"/>
+        </RelativeLayout>
+        <TextView
+            android:textColor="@android:color/black"
+            android:layout_width="wrap_content"
+            android:id="@+id/buynow_textview"
+            android:text="BUY NOW"
+            android:gravity="start|center|center_horizontal"
+            android:layout_gravity="left"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+    </LinearLayout>
+    <LinearLayout android:id="@+id/footer"
+        android:visibility="gone"
+        android:layout_width="fill_parent"
+        android:layout_height="62dp"
+        android:orientation="horizontal"
+        android:background="#FF000000"
+
+        android:layout_alignParentBottom="true">
+        <ImageButton android:id="@+id/btn_ex_back"
+            android:layout_marginRight="1dp"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:src="@mipmap/news"
+            android:background="@drawable/buttonselector"
+            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            />
+
+        <ImageButton android:id="@+id/btn_ex_happening"
+            android:layout_margin="1dp"
+            android:background="@drawable/buttonselector"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:src="@mipmap/events"
+            android:gravity="center_horizontal"
+            />
+        <ImageButton android:id="@+id/btn_ex_search"
+            android:layout_margin="1dp"
+
+            android:background="@drawable/buttonselector"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:src="@mipmap/explore"
+            android:gravity="center_horizontal" />
+        <ImageButton android:id="@+id/btn_ex_entertainment"
+            android:layout_margin="1dp"
+            android:background="@drawable/buttonselector"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:src="@mipmap/specials"
+            android:gravity="center_horizontal"
+            />
+        <RelativeLayout
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <ImageButton android:id="@+id/btn_ex_more"
+                android:layout_margin="1dp"
+                android:background="@drawable/buttonselector"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/more"
+                android:gravity="center_horizontal"
+                />
+            <TextView
+                android:id="@+id/text_batchvalue_main"
+                android:minWidth="20dp"
+                android:visibility="gone"
+                android:minHeight="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_alignTop="@id/btn_artcileprofile"
+                android:layout_centerInParent="true"
+                android:layout_alignRight="@id/btn_artcileprofile"
+                android:background="@drawable/batgetext"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:textColor="@android:color/white"
+                android:textSize="10sp"/>
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
