--- a/app/src/main/res/layout/explore_my_spinner_style.xml
+++ b/app/src/main/res/layout/explore_my_spinner_style.xml
@@ -3,6 +3,7 @@
     style="?android:attr/spinnerItemStyle"
     android:singleLine="true"
     android:textColor="#ffffff"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+
     android:ellipsize="marquee" />
